Bug 156701 - JRE errors messages still appearing for Macros
Summary: JRE errors messages still appearing for Macros
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Java-Runtime-JRE-Warnings Java-Runtime-JRE
  Show dependency treegraph
 
Reported: 2023-08-09 16:04 UTC by LucasLibre
Modified: 2023-09-27 15:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LucasLibre 2023-08-09 16:04:14 UTC
Description:
After uninstalling JRE, and installing the latest daily build of LibreOfficeDev, Writer still shows error messages for JRE for non Java required macros.

Steps to Reproduce:
1. Install JRE for Windows
2. Uninstall JRE for Windows
3. Install latest LibreOfficeDev daily build
4. Open Writer
5. Insert an image
6. Right click image
7. Select Properties
8. Go to Macros tab

Actual Results:
An error message appears: "JRE is Defective: LibreOffice requires a Java runtime environment (JRE) to perform this task. The selected JRE is defective. Please select another version or install a new JRE and select it under Tools - Options - LibreOffice - Advanced."

Expected Results:
No error message: BASIC and Python macros shouldn't require JRE


Reproducible: Always


User Profile Reset: No

Additional Info:
This follows on from Bug 156161 "Organise Macros > Python requires JRE" - this had a bug fix, but the issue is persisting.

I installed the latest daily master build from here: https://dev-builds.libreoffice.org/daily/master/ (Win-x86_64@tb77-TDF dated 2023-Aug-09 06:44) and unfortunately I'm still getting the same error messages, both for Python Macros (the issue listed in the original bug report), and for the Image properties macros tab (another instance of the error message, given in the steps to reproduce, above).

Help > About LibreOffice:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c3cf88f73e29a79f890782b31d1ecc6ed1c376ea
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 1 LucasLibre 2023-08-09 16:07:06 UTC
CCing Mike Kaganski, after discussing with him via PM at ask.libreoffice.com - thanks for persisting with this!
Comment 2 Dieter 2023-08-19 11:45:11 UTC
(In reply to LucasLibre from comment #0)
> Additional Info:
> This follows on from Bug 156161 "Organise Macros > Python requires JRE" -
> this had a bug fix, but the issue is persisting.

So you should give that feedback as comment in bug 156161, if the problem isn't fixed.
Comment 3 LucasLibre 2023-08-22 22:54:51 UTC
> So you should give that feedback as comment in bug 156161, if the problem isn't fixed.

I wasn't sure about any of this, so checked with Mike, who seemed to be the only one working on these issues; he suggested starting a new bug (i.e. this one) and copying him in, which I've done. Will revive the old bug request now.
Comment 4 Mike Kaganski 2023-08-23 06:26:10 UTC
Repro.

And as discussed, it is different. Thank you for filing this!
Comment 5 Mike Kaganski 2023-08-23 07:17:06 UTC
https://gerrit.libreoffice.org/c/core/+/155964
Comment 6 Commit Notification 2023-08-23 08:55:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f12d6b76b6dd80c81a4d9902593ef5c762a3af73

tdf#156701: Move DontEnableJava handling into askForRetry

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 LucasLibre 2023-08-26 09:37:10 UTC
Have tried out the fix, and I'm no longer getting the error message!

Unfortunately though, the Create, Edit, Rename, and Delete buttons are still greyed out in the Python Macros dialog box. As this is a separate issue, I'll create a new bug.
Comment 8 Dieter 2023-08-26 11:58:44 UTC
(In reply to LucasLibre from comment #7)
> Have tried out the fix, and I'm no longer getting the error message!
> 
=> VERIFIED FIXED