tdf#156701: Move DontEnableJava handling into askForRetry

Change-Id: I0deeed09fcea765e66c1967f40d60a1222f90c08
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155964
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>